# machine-learning

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cspell.json  mkdocs.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: pull_request_template.md
data/charts/: federated_leaning.drawio
data/presentation/: notes.md
machine_learning/exam/: bank.ipynb  bank_marketing.ipynb  category_col_values.json  cats_dogs.ipynb
machine_learning/exam/checkpoints/: checkpoint  cnn-16_12-20_08.ckpt.index  cnn-16_12-21_16.ckpt.index  cnn-16_12-21_30.ckpt.index  cnn-16_12-22_02.ckpt.index  cnn-16_12-22_12.ckpt.index
machine_learning/exercises/: uebung_1_linreg.ipynb  uebung_2_optimierung.ipynb
machine_learning/notebooks/: uebung_1_linreg.ipynb  uebung_2_optimierung.ipynb
